home: left align the nav correctly

--- a/app/assets/css/components/_home.scss
+++ b/app/assets/css/components/_home.scss
@@ -107,6 +107,10 @@
                 padding: 15px;
             }
         }
+
+        > li:first-child a {
+            padding-left: 0;
+        }
     }
 }
 
